--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1213,11 +1213,11 @@
                 <key>SystemMemoryStatus</key>
                 <string>Auto</string>
                 <key>SystemProductName</key>
-                <string>iMac20,1</string>
+                <string>MacPro7,1</string>
                 <key>SystemSerialNumber</key>
-                <string>C02C3SY2PN5T</string>
+                <string>F5KDN040P7QM</string>
                 <key>SystemUUID</key>
-                <string>F01E37E9-FFBE-4A15-987A-C8614906C470</string>
+                <string>86BFBA8D-C9EE-4DA6-AD75-DC02384DB753</string>
             </dict>
             <key>UpdateDataHub</key>
             <true/>
